syntax = "proto3";

package product;

option java_multiple_files = true;
option java_package = "com.example.product.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProductInfo(GetProductRequest) returns (ProductInfo);
  rpc ValidatePriceWithVersion(ValidatePriceRequest) returns (ProductInfo);
}

message GetProductRequest {
  string product_id = 1;
  int64 version = 2;
}

message ValidatePriceRequest {
  string product_id = 1;
  double price = 2;
  int64 version = 3;
}

message ProductInfo {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
  int64 version = 6;
}

